--- a/cannabis.html
+++ b/cannabis.html
@@ -4,8 +4,14 @@
        <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <!-- Page titile -->
-    <title>กัญชา |  AppHerb</title>
-    <meta name="description"  content="App Herb แหล่งข้อมูลสมุนไพรที่เชื่อถือได้" />
+    <title>กัญชา  |  AppHerb</title>
+    <meta property="og:title" content="กัญชาทางการแพทย์  |  AppHerb" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://tarapongsri.github.io/AppHerbprototype/cannabis.html" />
+    <meta property="og:image" content="https://tarapongsri.github.io/AppHerbprototype/images/appherb-icon.svg" />
+    <meta property="og:image:width" content="200">
+    <meta property="og:image:height" content="200"> 
+    <meta name="description"  content="กัญชาทางการแพทย์ | App Herb แหล่งข้อมูลสมุนไพรที่เชื่อถือได้" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Appherb icon -->
