--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
           </div>
           <div class="col-md-4 contact-text">
             <h4>คณะเภสัชศาสตร์ มหาวิทยาลัยขอนแก่น อ.เมือง จ.ขอนแก่น 40001</h4>
-            <a class="contact-link" href="tel:123-456-7890"><h4>โทร 084-5104162 หรือ 085-9285112</h4></a>
+            <a class="contact-link" href="tel:084-5104162"><h4>โทร 084-5104162</h4></a> <a class="contact-link" href="tel:085-9285112"><h4>หรือ 085-9285112</h4></a>
           </div>
           <div class="col-md-4 contact-text">
             <a href="https://www.facebook.com/appherb.co" type="button" class="btn"><i class="social-icon fab fa-facebook-square fa-2x"></i><h4 class="social-icon">facebook</h4></a>
