--- a/cannabis.html
+++ b/cannabis.html
@@ -9,9 +9,9 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://tarapongsri.github.io/AppHerbprototype/cannabis.html" />
     <meta property="og:image" content="https://tarapongsri.github.io/AppHerbprototype/images/appherb-icon.svg" />
-<meta property="og:image:type" content="image/svg"/>
-    <meta property="og:image:width" content="200"/>
-    <meta property="og:image:height" content="200"/> 
+<meta property="og:image:type" content="image/svg">
+    <meta property="og:image:width" content="200">
+    <meta property="og:image:height" content="200"> 
     <meta name="description"  content="กัญชาทางการแพทย์ | App Herb แหล่งข้อมูลสมุนไพรที่เชื่อถือได้" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
