--- a/cannabis.html
+++ b/cannabis.html
@@ -6,12 +6,10 @@
     <!-- Page titile -->
     <title>กัญชา  |  AppHerb</title>
     <meta property="og:title" content="กัญชาทางการแพทย์  |  AppHerb" />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://tarapongsri.github.io/AppHerbprototype/cannabis.html" />
-    <meta property="og:image" content="https://tarapongsri.github.io/AppHerbprototype/images/appherb-icon.svg" />
-<meta property="og:image:type" content="image/svg">
-    <meta property="og:image:width" content="200">
-    <meta property="og:image:height" content="200"> 
+    <meta property="og:image" content="https://tarapongsri.github.io/AppHerbprototype/images/appherb-logo.png" />
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image:width" content="200"/>
+    <meta property="og:image:height" content="200"/> 
     <meta name="description"  content="กัญชาทางการแพทย์ | App Herb แหล่งข้อมูลสมุนไพรที่เชื่อถือได้" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -43,7 +41,7 @@
     <body>
       <div id="header">
         <nav class="navbar fixed-top navbar-expand-lg navbar-custom">
-          <a class="navbar-brand" href="#conclusion"><img src="images/appherb-icon.svg" class="navbar-brand-logo"/> AppHerb</a>
+          <a class="navbar-brand" href="#conclusion"><img src="images/Appherb-logo.png" class="navbar-brand-logo"/></a>
           <button
             class="navbar-toggler"
             type="button"
