--- a/herbinfo.html
+++ b/herbinfo.html
@@ -5,11 +5,16 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <!-- Page titile -->
-    <title>AppHerb แหล่งข้อมูลสมุนไพรที่เชื่อถือได้</title>
+    <title>ค้นหาสมุนไพร | AppHerb แหล่งข้อมูลสมุนไพรที่เชื่อถือได้</title>
     <meta
       name="description"
       content="App Herb แหล่งข้อมูลสมุนไพรที่เชื่อถือได้"
     />
+    <meta property="og:title" content="ค้นหาสมุนไพร | AppHerb" />
+    <meta property="og:image" content="https://tarapongsri.github.io/AppHerbprototype/images/appherb-logo.png" />
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image:width" content="200"/>
+    <meta property="og:image:height" content="200"/> 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Appherb icon -->
@@ -96,9 +101,9 @@
         <nav class="navbar fixed-top navbar-expand-lg navbar-custom">
           <a class="navbar-brand" href="#header">
             <img
-              src="images/appherb-icon.svg"
+              src="images/appherb-logo.png"
               class="navbar-brand-logo"
-            /> AppHerb
+            />
           </a>
           <button
             class="navbar-toggler"
