--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <!-- Page titile -->
     <title>AppHerb แหล่งข้อมูลสมุนไพรที่เชื่อถือได้</title>
+    <meta property="og:title" content="AppHerb แหล่งข้อมูลสมุนไพรที่เชื่อถือได้" />
+    <meta property="og:image" content="https://tarapongsri.github.io/AppHerbprototype/images/appherb-logo.png" />
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image:width" content="200"/>
+    <meta property="og:image:height" content="200"/> 
     <meta
       name="description"
       content="App Herb แหล่งข้อมูลสมุนไพรที่เชื่อถือได้"
@@ -96,9 +101,9 @@
         <nav class="navbar fixed-top navbar-expand-lg navbar-custom">
           <a class="navbar-brand" href="#header">
             <img
-              src="images/appherb-icon.svg"
+              src="images/Appherb-logo.png"
               class="navbar-brand-logo"
-            /> AppHerb
+            /> 
           </a>
           <button
             class="navbar-toggler"
@@ -336,7 +341,7 @@
         <h3>ติดต่อเรา</h3>
         <div class="row">
           <div class="col-md-4 contact-text">
-            <a class="contact-link" href = "mailto: tarapong.sri@gmail.com"><h4>tarapong.sri@gmail.com</h4></a>
+            <a class="contact-link" href = "tarapong.sri@gmail.com"><h4>tarapong.sri@gmail.com</h4></a>
           </div>
           <div class="col-md-4 contact-text">
             <h4>คณะเภสัชศาสตร์ มหาวิทยาลัยขอนแก่น อ.เมือง จ.ขอนแก่น 40001</h4>
