--- a/cannabis.html
+++ b/cannabis.html
@@ -138,7 +138,7 @@
       <div class="col-md-9 main-content" id="main-content" role="main" data-spy="scroll" data-target="sidebar-sticky">
         <div class="container-fluid">
           <h3 class="mb-4" id="conclusion">กัญชา (Marijuana)</h3>
-          <img src="images/cannabis-conclude.png" class="img-conclude" alt="กัญชาสรุป">
+          <img src="images/cannabis-conclude.jpg" class="img-conclude" alt="กัญชาสรุป">
           <div class="col-md-4 ">
             <a href="" type="button" class="btn"><h5 class="social-icon">แชร์</h5></a>
             <a href="https://www.facebook.com/appherb.co" type="button" class="btn"><i class="social-icon fab fa-facebook-square fa-2x"></i><h5 class="social-icon">facebook</h5></a>
