--- a/herbinfo.html
+++ b/herbinfo.html
@@ -99,7 +99,7 @@
 <section id="header">
       <div class="container-fluid">
         <nav class="navbar fixed-top navbar-expand-lg navbar-custom">
-          <a class="navbar-brand" href="#header">
+          <a class="navbar-brand" href="index.html#header">
             <img
               src="images/appherb-logo.png"
               class="navbar-brand-logo"
@@ -118,10 +118,6 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav ms-auto">
-           <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="index.html#header"
-                  >หน้าแรก</a>
-              </li>
               <li class="nav-item">
                 <a class="nav-link" href="index.html#header">ออกจากระบบ</a>
               </li>
