--- a/cannabis.html
+++ b/cannabis.html
@@ -41,7 +41,7 @@
     <body>
       <div id="header">
         <nav class="navbar fixed-top navbar-expand-lg navbar-custom">
-          <a class="navbar-brand" href="#conclusion"><img src="images/Appherb-logo.png" class="navbar-brand-logo"/></a>
+          <a class="navbar-brand" href="index.html#header"><img src="images/Appherb-logo.png" class="navbar-brand-logo"/></a>
           <button
             class="navbar-toggler"
             type="button"
@@ -54,17 +54,6 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav ms-auto">
-              <li class="nav-item">
-
-
-
-
-                   
-
-
-                <a class="nav-link" aria-current="page" href="index.html#header"
-                  >หน้าแรก</a>
-              </li>
               <li class="nav-item">
                 <a class="nav-link" href="index.html#header">ออกจากระบบ</a>
               </li>
