--- a/herbinfo.html
+++ b/herbinfo.html
@@ -100,11 +100,7 @@
       <div class="container-fluid">
         <nav class="navbar fixed-top navbar-expand-lg navbar-custom">
           <a class="navbar-brand" href="index.html#header">
-            <img
-              src="images/appherb-logo.png"
-              class="navbar-brand-logo"
-            />
-          </a>
+            <img src="images/appherb-logo.png" class="navbar-brand-logo"/></a>
           <button
             class="navbar-toggler"
             type="button"
