--- a/herbinfo.html
+++ b/herbinfo.html
@@ -100,7 +100,11 @@
       <div class="container-fluid">
         <nav class="navbar fixed-top navbar-expand-lg navbar-custom">
           <a class="navbar-brand" href="index.html#header">
-            <img src="images/appherb-logo.png" class="navbar-brand-logo"/></a>
+            <img
+              src="images/appherb-logo.png"
+              class="navbar-brand-logo"
+            />
+          </a>
           <button
             class="navbar-toggler"
             type="button"
@@ -178,11 +182,11 @@
         <h3>ติดต่อเรา</h3>
         <div class="row">
           <div class="col-md-4 contact-text">
-            <a class="contact-link" href = "mailto: abc@example.com"><h4>contact@appherb.co.th</h4></a>
+            <a class="contact-link" href = "tarapong.sri@gmail.com"><h4>tarapong.sri@gmail.com</h4></a>
           </div>
           <div class="col-md-4 contact-text">
             <h4>คณะเภสัชศาสตร์ มหาวิทยาลัยขอนแก่น อ.เมือง จ.ขอนแก่น 40001</h4>
-            <a class="contact-link" href="tel:123-456-7890"><h4>โทร 043-2562810</h4></a>
+            <a class="contact-link" href="tel:084-5104162"><h4>โทร 084-5104162</h4></a> <a class="contact-link" href="tel:085-9285112"><h4>หรือ 085-9285112</h4></a>
           </div>
           <div class="col-md-4 contact-text">
             <a href="https://www.facebook.com/appherb.co" type="button" class="btn"><i class="social-icon fab fa-facebook-square fa-2x"></i><h4 class="social-icon">facebook</h4></a>
