--- a/herbinfo.html
+++ b/herbinfo.html
@@ -99,11 +99,11 @@
 <section id="header">
       <div class="container-fluid">
         <nav class="navbar fixed-top navbar-expand-lg navbar-custom">
-          <a class="navbar-brand" href="index.html#header">
+          <a class="navbar-brand" href="#header">
             <img
-              src="images/appherb-logo.png"
+              src="images/Appherb-logo.png"
               class="navbar-brand-logo"
-            />
+            /> 
           </a>
           <button
             class="navbar-toggler"
