--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 
-<html>
+<html prefix="og: https://ogp.me/ns#">
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <!-- Page titile -->
     <title>AppHerb แหล่งข้อมูลสมุนไพรที่เชื่อถือได้</title>
     <meta property="og:title" content="AppHerb แหล่งข้อมูลสมุนไพรที่เชื่อถือได้" />
-    <meta property="og:image" content="https://tarapongsri.github.io/AppHerbprototype/images/Appherb-logo.png" />
+    <meta property="og:url" content="https://tarapongsri.github.io/AppHerbprototype/" />
+    <meta property="og:image" content="https://tarapongsri.github.io/AppHerbprototype/images/appherb-logo.png" />
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="200"/>
     <meta property="og:image:height" content="200"/> 
