--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <meta property="og:url" content="https://tarapongsri.github.io/AppHerbprototype/" />
     <meta property="og:image" content="https://tarapongsri.github.io/AppHerbprototype/images/Appherb-logo.png" />
     <meta property="og:image:type" content="image/png">
-    <!-- <meta property="og:image:width" content="200"/>
-    <meta property="og:image:height" content="200"/>  -->
+    <meta property="og:image:width" content="200"/>
+    <meta property="og:image:height" content="200"/> 
     <meta name="description"       content="App Herb แหล่งข้อมูลสมุนไพรที่เชื่อถือได้"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
